--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
-<h1>BRETMER CONDORI HUAMANTOMA</h1>
-<p>Soy un estudiante de APSTI "V" periodo, <strong>apasionado por la tecnológia y el aprendizaje constante.</strong></p>
-<img src="assets/imagen_personal.jpg" alt="Imagen personal" width="120px">
-<h2><i>Hobbies</i></h2>
-<ul>
-    <li><strong>Jugar fútbol</strong></li>
-    <li>Jugar videojuegos</li>
-    <li>Jugar con mi mascota</li>
-</ul>
-<hr>
-<h2><i>Pasatiempos</i></h2>
-<ul>
-    <li>Escuchar musica</li>
-    <li><strong>Ver videos</strong></li>
-    <li>Caminar</li>
-</ul>
-<hr>
-<h2><i>Actividades favoritas</i></h2>
-<ul>
-    <li><strong>Cocinar</strong></li>
-    <li>Trabajar en equipo</li>
-    <li>Aprender cosas nuevas en internet</li>
-</ul>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Portafolio personal</title>
+    </head>
+    <body>
+        <section>
+            <h1>BRETMER CONDORI HUAMANTOMA</h1>
+            <p>Soy un estudiante de APSTI "V" periodo, <strong>apasionado por la tecnológia y el aprendizaje constante.</strong></p>
+            <img src="assets/imagen_personal.jpg" alt="Imagen personal" width="120px">
+            <hr>
+            <h2><i>Hobbies</i></h2>
+            <ul>
+                <li><strong>Jugar fútbol</strong></li>
+                <li>Jugar videojuegos</li>
+                <li>Jugar con mi mascota</li>
+            </ul>
+            <hr>
+        </section>
+        <section>
+            <h2><i>Pasatiempos</i></h2>
+            <ul>
+                <li>Escuchar musica</li>
+                <li><strong>Ver videos</strong></li>
+                <li>Caminar</li>
+            </ul>
+            <hr>
+        </section>
+        <section>
+            <h2><i>Actividades favoritas</i></h2>
+            <ul>
+                <li><strong>Cocinar</strong></li>
+                <li>Trabajar en equipo</li>
+                <li>Aprender cosas nuevas en internet</li>
+            </ul>
+        </section>
+    </body>
+</html>
