fix: cambia la estructura de html
se ajusta y se acomoda el codigo en la nueva estructura

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Portafolio personal</title>
-    </head>
-    <body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portafolio personal</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>BRETMER CONDORI HUAMANTOMA</h1>
+    </header>
+    <main>
         <section>
-            <h1>BRETMER CONDORI HUAMANTOMA</h1>
-            <p>Soy un estudiante de APSTI "V" periodo, <strong>apasionado por la tecnológia y el aprendizaje constante.</strong></p>
             <img src="assets/imagen_personal.jpg" alt="Imagen personal" width="120px">
+            <p>Soy un estudiante de APSTI "V" periodo, <strong>apasionado por la tecnológia y el aprendizaje constante.</strong></p>
             <hr>
             <h2><i>Hobbies</i></h2>
             <ul>
@@ -34,5 +40,8 @@
                 <li>Aprender cosas nuevas en internet</li>
             </ul>
         </section>
-    </body>
+    </main>
+
+        <script src="script.js"></script>
+</body>
 </html>
